--- a/requirements.txt
+++ b/requirements.txt
@@ -1,107 +1,26 @@
-anaconda==0.0.1.1
-attrs==19.3.0
-backcall==0.1.0
-bleach==3.1.4
-breeze==0.1
-certifi==2019.11.28
+certifi==2020.4.5.1
 chardet==3.0.4
-chart-studio==1.0.0
-Click==7.0
-colorama==0.4.3
-colorlover==0.3.0
-conda==4.3.16
-cufflinks==0.17.0
-cycler==0.10.0
-dash==1.9.0
+click==7.1.1
+dash==1.11.0
 dash-auth==1.3.2
-dash-bootstrap-components==0.9.1
-dash-core-components==1.8.0
-dash-html-components==1.0.2
-dash-renderer==1.2.4
-dash-table==4.6.0
-decorator==4.4.1
-defusedxml==0.6.0
-df2gspread==1.0.4
-entrypoints==0.3
-et-xmlfile==1.0.1
-Flask==1.1.1
+dash-bootstrap-components==0.9.2
+dash-core-components==1.9.1
+dash-html-components==1.0.3
+dash-renderer==1.4.0
+dash-table==4.6.2
+Flask==1.1.2
 Flask-Compress==1.4.0
 Flask-SeaSurf==0.2.2
 future==0.18.2
-gitdb2==2.0.6
-GitPython==3.0.7
-google-api-python-client==1.6.7
-gspread==3.2.0
-httplib2==0.17.0
-idna==2.8
-iexfinance==0.4.3
-ipykernel==5.1.4
-ipython==7.12.0
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
+idna==2.9
 itsdangerous==1.1.0
-jdcal==1.4.1
-jedi==0.16.0
 Jinja2==2.11.1
-jsonschema==3.2.0
-jupyter-client==5.3.4
-jupyter-core==4.6.1
-jupyterlab-git==0.9.0
-kiwisolver==1.1.0
 MarkupSafe==1.1.1
-matplotlib==3.1.3
-mistune==0.8.4
-mysql-connector==2.2.9
-nbconvert==5.6.1
-nbdime==1.1.0
-nbformat==5.0.4
-nodejs==0.1.1
-notebook==6.0.3
-numpy==1.18.1
-oauth2client==4.1.3
-openpyxl==3.0.3
-optional-django==0.1.0
-pandas==1.0.1
-pandocfilters==1.4.2
-parso==0.6.1
-pexpect==4.8.0
-pickleshare==0.7.5
-plotly==4.5.0
-pprint==0.1
-projectscheduler==0.6.0
-prometheus-client==0.7.1
-prompt-toolkit==3.0.3
-ptyprocess==0.6.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycosat==0.6.3
-Pygments==2.5.2
-PyMySQL==0.9.3
-pyparsing==2.4.6
-pyrsistent==0.15.7
-python-dateutil==2.8.1
-pytz==2019.3
-pyzmq==18.1.1
-requests==2.22.0
+numpy==1.18.2
+plotly==4.6.0
+requests==2.23.0
 retrying==1.3.3
-rsa==4.0
-ruamel.yaml==0.16.10
-ruamel.yaml.clib==0.2.0
-Send2Trash==1.5.0
 six==1.14.0
-smmap2==2.0.5
-SQLAlchemy==1.3.13
-svgwrite==1.3.1
-terminado==0.8.3
-testpath==0.4.4
-tornado==6.0.3
-traitlets==4.3.3
 ua-parser==0.10.0
-uritemplate==3.0.1
 urllib3==1.25.8
-wcwidth==0.1.8
-webencodings==0.5.1
-Werkzeug==1.0.0
-widgetsnbextension==3.5.1
-xlrd==1.2.0
-XlsxWriter==1.2.7
+Werkzeug==1.0.1
