--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
 numpy==1.18.2
+pandas==1.0.3
 plotly==4.6.0
 requests==2.23.0
 retrying==1.3.3
